# pypipe

./: README.md  pyproject.toml  tests.py
pypipe/: core.py
