[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPipe"
version = "1.0"
authors = [
  { name="Sunny Beta", email="sunnybeta@protonmail.com" },
]
description = "Functiona Piper for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sunnybeta/pypipe"
"Bug Tracker" = "https://github.com/sunnybeta/pypipe/issues"

